[B]Version 1.1.5[/B]
- Add missing radiobutton textures
- Cleanup images
- Add invalidcolor for edit control

[B]Version 1.1.4[/B]
- Add music multi disc support

[B]Version 1.1.3[/B]
- Fix category and submenu focus
- Fixes for codec flagging
- Adjustments to sideblade TetradUI logo

[B]Version 1.1.2[/B]
- Skin settings: hide movies / tv shows / music buttons are disabled if no library content is available
- Add navigation welcome dialog

[B]Version 1.1.1[/B]
- Add new media control buttons
- Recode and update side blade buttons

[B]Version 1.1.0[/B]
- Add update library / toggle watched buttons in media windows
- Fix filter button in media windows
- Add completely new buttons images
- Rewrite some views
- Add README.md (thanks to Ch3dd4rGoblin)
- Add screenshots

[B]Version 1.0.1[/B]
- Improvements for busy dialog
- Fixes for Now Playing widget
- Fix DVD codec flag
- Fix clock and background in fullscreen music and video window
- Add new icon, fanart and clearlogo (thanks to Ch3dd4rGoblin)

[B]Version 1.0.0[/B]
- Alpha version

[B]Version 0.0.9[/B]
- Matrix version

[B]Version 0.0.8[/B]
- Leia version

[B]Version 0.0.7[/B]
- Krypton version

[B]Version 0.0.6[/B]
- Jarvis version

[B]Version 0.0.5[/B]
- Isengard version

[B]Version 0.0.4[/B]
- Helix version

[B]Version 0.0.3[/B]
- Gotham version

[B]Version 0.0.2[/B]
- Frodo version

[B]Version 0.0.1[/B]
- Initial version