@@ -25,6 +25,7 @@
 			<fadetime>FanartCrossfadeTime</fadetime>
 			<animation effect="fade" start="0" end="100" time="300" delay="400">WindowOpen</animation>
 			<animation effect="fade" start="100" end="0" time="HomeBladeAnimationSpeed">WindowClose</animation>
+			<include condition="Skin.HasSetting(AnimateFanart)">BackgroundAnim</include>
 		</control>
 	</include>
 	<include name="RainDropAnimationBackground">
@@ -121,6 +122,7 @@
 			<timeperimage>10000</timeperimage>
 			<randomize>true</randomize>
 			<fadetime>200</fadetime>
+			<include condition="!Skin.HasSetting(AnimateFanart)">BackgroundAnim</include>
 			<visible>!String.IsEmpty(Skin.String(WeatherFanartAddon.path)) + !String.IsEmpty(Window(Weather).Property(Current.FanartCode))</visible>
 		</control>
 		<control type="image">
