@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <window>
+	<onload condition="System.AddonIsEnabled(script.artistslideshow) + !Skin.HasSetting(Back_Fanart) + !Skin.HasSetting(DontBlendBackground) + Skin.HasSetting(EnableArtistSlideshow)">RunScript(script.artistslideshow)</onload>
 	<controls>
 		<control type="visualisation">
 			<description>visualisation</description>
@@ -8,13 +9,18 @@
 			<width>1280</width>
 			<height>720</height>
 		</control>
-		<control type="image">
+		<control type="multiimage">
 			<description>Background Fanart</description>
 			<width>1280</width>
 			<height>720</height>
-			<texture background="true">$INFO[Player.Art(fanart)]</texture>
+			<aspectratio>scale</aspectratio>
+			<timeperimage>10000</timeperimage>
+			<randomize>true</randomize>
+			<fadetime>IconCrossfadeTime</fadetime>
+			<imagepath>$VAR[MusicPlayingArtistFanartSlideshowVar]</imagepath>
 			<visible>!Skin.HasSetting(Back_Fanart) + !Skin.HasSetting(DontBlendBackground)</visible>
 			<animation effect="fade" end="50" condition="true">Conditional</animation>
+			<include condition="Skin.HasSetting(AnimateFanart) | Skin.HasSetting(AnimateMusicPlayingFanart)">BackgroundAnim</include>
 		</control>
 		<!-- media infos -->
 		<control type="group">
